--- a/index.html
+++ b/index.html
@@ -2,9 +2,200 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/about.css">
 	<title>about</title>
 </head>
 <body>
-	111111
+	<div class="wrap">
+		<header id="header-wrap">
+		  <ul>
+		    <li></li>
+		    <li></li>
+		    <li></li>
+		    <li></li>
+		    <li></li>
+		    <li></li>
+		  </ul>
+		  <div class="top-bar">
+		    <div class="bar-wrap">
+		      <div class="top-title">
+		        <a href="#"><img src="images/logo-top.png" alt=""></a>
+		        <h2>orca</h2>
+		        <span>逆戟 · 个人网站</span>
+		      </div>
+		      <div class="bar-main">
+		        <div class="nav-wrap">
+		          <nav>
+		            <ul>
+		              <li><a href="/">首页</a></li>
+		              <li><a href="#about">关于</a></li>
+		              <li><a href="#skill">技能</a></li>
+		              <li><a href="#writing">作品</a></li>
+		              <li><a href="http://www.cnblogs.com/cangyuan/">博客</a></li>
+		              <li><a href="#contact">联系</a></li>
+		            </ul>
+		          </nav>
+		        </div>
+		        <ul></ul>
+		      </div>
+		    </div>
+		  </div>
+		</header>
+		<div class="info-wrap">
+		  <div class="info-bg">
+		    <div class="info-img">
+		      <img src="images/logo-top.png" alt="">
+		    </div>
+		    <p>美景如画，四季如春</p> 
+		  </div>  
+		</div>
+		<section id="about">
+		    <div class="se-title ab-title">
+		      <h2>简介</h2>
+		      <span class="border"></span>
+		      <h4>profile</h4>
+		    </div>
+		    <div class="ab-content">
+		      <div class="wrap-me"><img src="images/me.jpg" alt=""></div>
+		      <p><strong>orca</strong></p>
+		      <p>现居地 广东·佛山</p>
+		      <p>web前端开发工程师</p>
+		    </div>
+		</section>
+		<section id="skill">
+		  <div class="wrap-sk">
+		    <div class="se-title sk-skill">
+		      <h2>技能</h2>
+		      <span class="border"></span>
+		      <h4>my skills</h4>
+		    </div>
+		    <div class="sk-content">
+		      <ul>
+		        <li>
+		          <div class="sk-co-title">
+		            <h4>编程</h4>
+		            <p>Programming Skills</p>
+		          </div>
+		          <ul class="sk-list">
+		            <li>html,html5</li>
+		            <li>css,css3</li>
+		            <li>javascript</li>
+		            <li>nodejs</li>
+		            <li>mongodb</li>
+		          </ul>
+		        </li>
+		        <li>
+		          <div class="sk-co-title">
+		            <h4>框架</h4>
+		            <p>Frame Skills</p>
+		          </div>
+		          <ul class="sk-list">
+		            <li>bootstrap</li>
+		            <li>jquery</li>
+		            <li>angularjs</li>
+		            <li>express</li>
+		          </ul>
+		        </li>
+		        <li>
+		          <div class="sk-co-title">
+		            <h4>编辑器</h4>
+		            <p>Editor Skills</p>
+		          </div>
+		          <ul class="sk-list">
+		            <li>sublime</li>
+		            <li>webstrom</li>
+		            <li>eclipse</li>
+		            <li>notepad++</li>
+		          </ul>
+		        </li>
+		        <li>
+		          <div class="sk-co-title">
+		            <h4>设计</h4>
+		            <p>Design Skills</p>
+		          </div>
+		          <ul class="sk-list">
+		            <li>adobe photoshop</li>
+		            <li>adobe illustrator</li>
+		            <li>axure rp</li>
+		          </ul>
+		        </li>
+		      </ul>
+		    </div>
+		  </div>
+		</section>
+		<section id="writing">
+		  <div class="se-title wr-title">
+		    <h2>作品</h2>
+		    <span class="border"></span>
+		    <h4>my works</h4>
+		  </div>
+		  <div class="wr-content">
+		    <ul>
+		      <li>
+		        <a href="http://www.gdchenyi.com.cn">
+		          <div class="wr-img one">
+		            <img src="images/chenyi.png" alt="辰宜">
+		          </div>
+		          <p>广东辰宜信息科技官网</p>
+		        </a>
+		      </li>
+		      <li>
+		        <div class="wr-img">
+		          <img src="images/nanhai-home.jpg" alt="辰宜">
+		        </div>
+		        <p>南海区一窗通办填表系统</p>
+		      </li>
+		      <li>
+		        <div class="wr-img">
+		          <img src="images/nanhai-rp.jpg" alt="辰宜">
+		        </div>
+		        <p>axure 原型</p>
+		      </li>
+		    </ul>
+		  </div>
+		</section>
+		<section id="contact">
+		  <div class="se-title">
+		    <h2>联系我</h2>
+		    <span class="border"></span>
+		    <h4>contact me</h4>
+		  </div>
+		  <div class="co-content">
+		    <p>欢迎合作及提供工作机会。</p>
+		    <ul>
+		      <li>
+		        <a href="http://wpa.qq.com/msgrd?v=3&uin=1339918746&site=qq&menu=yes">
+		          <img src="images/QQ.png" alt="1339918746">
+		          <p>1339918746</p>
+		        </a>
+		      </li>
+		      <li>
+		        <a href="http://weibo.com/3199952410/profile?topnav=1&wvr=6&is_all=1">
+		          <img src="images/新浪.png" alt="沧苑">
+		          <p>@沧苑</p>
+		        </a>
+		      </li>
+		      <li>
+		        <a href="https://github.com/Cangyuan">
+		          <img src="images/github.png" alt="cangyuan">
+		          <p>@cangyuan.github</p>
+		        </a>
+		      </li>
+		      <li>
+		        <a href="#">
+		          <img src="images/位置.png" alt="位置">
+		          <p>广东·佛山</p>
+		        </a>
+		      </li>
+		    </ul>
+		  </div>
+		</section>
+		<footer>
+		  <div>
+		    <div>copyright © by orca</div>
+		  </div>
+		</footer>
+	</div>
 </body>
 </html>
