--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		        <div class="nav-wrap">
 		          <nav>
 		            <ul>
-		              <li><a href="/">首页</a></li>
+		              <li><a href="#">首页</a></li>
 		              <li><a href="#about">关于</a></li>
 		              <li><a href="#skill">技能</a></li>
 		              <li><a href="#writing">作品</a></li>
