--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="img/shortcut icon" type="text/css" href="bitbug_favicon.ico">
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/about.css">
 	<title>about</title>
@@ -31,6 +32,7 @@
 		              <li><a href="#">首页</a></li>
 		              <li><a href="#about">关于</a></li>
 		              <li><a href="#skill">技能</a></li>
+		              <li><a href="#foot">履历</a></li>
 		              <li><a href="#writing">作品</a></li>
 		              <li><a href="/">博客</a></li>
 		              <li><a href="#contact">联系</a></li>
@@ -124,6 +126,13 @@
 		    </div>
 		  </div>
 		</section>
+		<section id="foot">
+			<div class="se-title">
+			  <h2>履历</h2>
+			  <span class="border"></span>
+			  <h4>my Resume</h4>
+			</div>
+		</section>
 		<section id="writing">
 		  <div class="se-title wr-title">
 		    <h2>作品</h2>
@@ -133,7 +142,7 @@
 		  <div class="wr-content">
 		    <ul>
 		      <li>
-		        <a href="http://www.gdchenyi.com.cn">
+		        <a href="http://www.gdchenyi.com.cn" target="_blank">
 		          <div class="wr-img one">
 		            <img src="images/chenyi.png" alt="辰宜">
 		          </div>
