--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="css/home.css">
 	<script src="js/jquery-1.11.2.min.js"></script>
 	<script src="js/jquery.eventFlow.js"></script>
-	<title>about</title>
+	<title>逆戟·个人网站</title>
 </head>
 <body>
 	<div class="wrap">
@@ -46,6 +46,9 @@
 		      </div>
 		    </div>
 		  </div>
+		  <!-- <div class="onload">
+		  	onload
+		  </div> -->
 		</header>
 		<div class="info-wrap">
 		  <div class="info-bg">
