--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		  <div class="wr-content">
 		    <ul>
 		      <li>
-		        <a href="http://www.gdchenyi.com.cn" target="_blank">
+		        <a class="w-link" href="http://www.gdchenyi.com.cn" target="_blank">
 		          <div class="wr-img one">
 		            <img src="images/chenyi.png" alt="辰宜">
 		          </div>
@@ -169,6 +169,14 @@
 		          <img src="images/nanhai-home.jpg" alt="辰宜">
 		        </div>
 		        <p>南海区一窗通办填表系统</p>
+		      </li>
+		      <li>
+			      <a class="w-link" href="/spare" target="_blank">
+			        <div class="wr-img">
+			          <img src="images/nanhai-rp.jpg" alt="辰宜">
+			        </div>
+			        <p>绮罗生资源站</p>
+			      </a>
 		      </li>
 		      <li>
 		        <div class="wr-img">
