--- a/index.html
+++ b/index.html
@@ -14,18 +14,23 @@
 	<div class="me-info">
 		<div class="me">
 			<span class="close">&times</span>
+			<img src="images/me-open.jpg" alt="">
+			<h3>orca</h3>
+			<p>目前从事界面设计、交互设计、用户体验、前端开发及网页重构等相关工作</p>
+			<p><a href="#">个人详情</a></p>
+			<p><a href="files/resume.pdf" class="download">简历pdf</a></p>
 		</div>
 	</div>
 	<div class="wrap">
 		<header id="header-wrap">
-		  <ul>
+		  <!-- <ul>
 		    <li></li>
 		    <li></li>
 		    <li></li>
 		    <li></li>
 		    <li></li>
 		    <li></li>
-		  </ul>
+		  </ul> -->
 		  <div class="top-bar">
 		    <div class="bar-wrap">
 		      <div class="top-title">
@@ -36,6 +41,7 @@
 		      <div class="bar-main">
 		        <div class="nav-wrap">
 		          <nav>
+		          	<span class="head-me"><img src="images/me.png" alt=""></span>
 		            <ul>
 		              <li><a href="#">首页</a></li>
 		              <li><a href="#about">关于</a></li>
@@ -45,7 +51,9 @@
 		              <li><a href="/">博客</a></li>
 		              <li><a href="#contact">联系</a></li>
 		            </ul>
+
 		          </nav>
+
 		        </div>
 		        <ul></ul>
 		      </div>
@@ -55,179 +63,182 @@
 		  	onload
 		  </div> -->
 		</header>
-		<div class="info-wrap">
-		  <div class="info-bg">
-		    <div class="info-img">
-		      <img src="images/logo-top.png" alt="">
-		    </div>
-		    <p>美景如画，四季如春</p> 
-		  </div>  
-		</div>
-		<section id="about">
-		    <div class="se-title ab-title">
-		      <h2>简介</h2>
-		      <span class="border"></span>
-		      <h4>profile</h4>
-		    </div>
-		    <div class="ab-content">
-		      <div class="wrap-me"><img src="images/me.jpg" alt=""></div>
-		      <p><strong>orca</strong></p>
-		      <p>现居地 广东<span>·</span>佛山</p>
-		      <p>web前端开发工程师</p>
-		      <p>新乡医学院<span>·</span>本科</p>
-		      <p>爱好<span>·</span>看书<span>·</span>跑步</p>
-		      <p>专注界面设计、交互设计、前端开发，关注互联</p>
-		    </div>
-		</section>
-		<section id="skill">
-		  <div class="wrap-sk">
-		    <div class="se-title sk-skill">
-		      <h2>技能</h2>
-		      <span class="border"></span>
-		      <h4>my skills</h4>
-		    </div>
-		    <div class="sk-content">
-		      <ul>
-		        <li>
-		          <div class="sk-co-title">
-		            <h4>编程</h4>
-		            <p>Programming Skills</p>
-		          </div>
-		          <ul class="sk-list">
-		            <li>html,html5</li>
-		            <li>css,css3</li>
-		            <li>javascript</li>
-		            <li>nodejs</li>
-		            <li>mongodb</li>
-		          </ul>
-		        </li>
-		        <li>
-		          <div class="sk-co-title">
-		            <h4>框架</h4>
-		            <p>Frame Skills</p>
-		          </div>
-		          <ul class="sk-list">
-		            <li>bootstrap</li>
-		            <li>jquery</li>
-		            <li>angularjs</li>
-		            <li>express</li>
-		          </ul>
-		        </li>
-		        <li>
-		          <div class="sk-co-title">
-		            <h4>编辑器</h4>
-		            <p>Editor Skills</p>
-		          </div>
-		          <ul class="sk-list">
-		            <li>sublime</li>
-		            <li>webstrom</li>
-		            <li>eclipse</li>
-		            <li>notepad++</li>
-		          </ul>
-		        </li>
-		        <li>
-		          <div class="sk-co-title">
-		            <h4>设计</h4>
-		            <p>Design Skills</p>
-		          </div>
-		          <ul class="sk-list">
-		            <li>adobe photoshop</li>
-		            <li>adobe illustrator</li>
-		            <li>axure rp</li>
-		          </ul>
-		        </li>
-		      </ul>
-		    </div>
-		  </div>
-		</section>
-		<section id="foot">
-			<div class="se-title">
-			  <h2>履历</h2>
-			  <span class="border"></span>
-			  <h4>my Resume</h4>
+		<div class="main">
+			<div class="main-bg"></div>
+			<div class="info-wrap">
+			  <div class="info-bg">
+			    <div class="info-img">
+			      <img src="images/logo-top.png" alt="">
+			    </div>
+			    <p>美景如画，四季如春</p> 
+			  </div>  
 			</div>
-			<div class="foot-content">
-				<div class="event_wrap clearfix">
-				<div class="middle_line">					
-				</div>		
-			</div>
-			</div>
-		</section>
-		<section id="writing">
-		  <div class="se-title wr-title">
-		    <h2>作品</h2>
-		    <span class="border"></span>
-		    <h4>my works</h4>
-		  </div>
-		  <div class="wr-content">
-		    <ul>
-		      <li>
-		        <a class="w-link" href="http://www.gdchenyi.com.cn" target="_blank">
-		          <div class="wr-img one">
-		            <img src="images/chenyi.png" alt="辰宜">
-		          </div>
-		          <p>广东辰宜信息科技官网</p>
-		        </a>
-		      </li>
-		      <li>
-		        <div class="wr-img">
-		          <img src="images/nanhai-home.jpg" alt="辰宜">
-		        </div>
-		        <p>南海区一窗通办填表系统</p>
-		      </li>
-		      <li>
-			      <a class="w-link" href="/spare" target="_blank">
+			<section id="about">
+			    <div class="se-title ab-title">
+			      <h2>简介</h2>
+			      <span class="border"></span>
+			      <h4>profile</h4>
+			    </div>
+			    <div class="ab-content">
+			      <div class="wrap-me"><img src="images/me.jpg" alt=""></div>
+			      <p><strong>orca</strong></p>
+			      <p>现居地 广东<span>·</span>佛山</p>
+			      <p>web前端开发工程师</p>
+			      <p>新乡医学院<span>·</span>本科</p>
+			      <p>爱好<span>·</span>看书<span>·</span>跑步</p>
+			      <p>专注界面设计、交互设计、前端开发，关注互联</p>
+			    </div>
+			</section>
+			<section id="skill">
+			  <div class="wrap-sk">
+			    <div class="se-title sk-skill">
+			      <h2>技能</h2>
+			      <span class="border"></span>
+			      <h4>my skills</h4>
+			    </div>
+			    <div class="sk-content">
+			      <ul>
+			        <li>
+			          <div class="sk-co-title">
+			            <h4>编程</h4>
+			            <p>Programming Skills</p>
+			          </div>
+			          <ul class="sk-list">
+			            <li>html,html5</li>
+			            <li>css,css3</li>
+			            <li>javascript</li>
+			            <li>nodejs</li>
+			            <li>mongodb</li>
+			          </ul>
+			        </li>
+			        <li>
+			          <div class="sk-co-title">
+			            <h4>框架</h4>
+			            <p>Frame Skills</p>
+			          </div>
+			          <ul class="sk-list">
+			            <li>bootstrap</li>
+			            <li>jquery</li>
+			            <li>angularjs</li>
+			            <li>express</li>
+			          </ul>
+			        </li>
+			        <li>
+			          <div class="sk-co-title">
+			            <h4>编辑器</h4>
+			            <p>Editor Skills</p>
+			          </div>
+			          <ul class="sk-list">
+			            <li>sublime</li>
+			            <li>webstrom</li>
+			            <li>eclipse</li>
+			            <li>notepad++</li>
+			          </ul>
+			        </li>
+			        <li>
+			          <div class="sk-co-title">
+			            <h4>设计</h4>
+			            <p>Design Skills</p>
+			          </div>
+			          <ul class="sk-list">
+			            <li>adobe photoshop</li>
+			            <li>adobe illustrator</li>
+			            <li>axure rp</li>
+			          </ul>
+			        </li>
+			      </ul>
+			    </div>
+			  </div>
+			</section>
+			<section id="foot">
+				<div class="se-title">
+				  <h2>履历</h2>
+				  <span class="border"></span>
+				  <h4>my Resume</h4>
+				</div>
+				<div class="foot-content">
+					<div class="event_wrap clearfix">
+					<div class="middle_line">					
+					</div>		
+				</div>
+				</div>
+			</section>
+			<section id="writing">
+			  <div class="se-title wr-title">
+			    <h2>作品</h2>
+			    <span class="border"></span>
+			    <h4>my works</h4>
+			  </div>
+			  <div class="wr-content">
+			    <ul>
+			      <li>
+			        <a class="w-link" href="http://www.gdchenyi.com.cn" target="_blank">
+			          <div class="wr-img one">
+			            <img src="images/chenyi.png" alt="辰宜">
+			          </div>
+			          <p>广东辰宜信息科技官网</p>
+			        </a>
+			      </li>
+			      <li>
+			        <div class="wr-img">
+			          <img src="images/nanhai-home.jpg" alt="辰宜">
+			        </div>
+			        <p>南海区一窗通办填表系统</p>
+			      </li>
+			      <li>
+				      <a class="w-link" href="/spare" target="_blank">
+				        <div class="wr-img">
+				          <img src="images/nanhai-rp.jpg" alt="辰宜">
+				        </div>
+				        <p>绮罗生资源站</p>
+				      </a>
+			      </li>
+			      <li>
 			        <div class="wr-img">
 			          <img src="images/nanhai-rp.jpg" alt="辰宜">
 			        </div>
-			        <p>绮罗生资源站</p>
-			      </a>
-		      </li>
-		      <li>
-		        <div class="wr-img">
-		          <img src="images/nanhai-rp.jpg" alt="辰宜">
-		        </div>
-		        <p>axure 原型</p>
-		      </li>
-		    </ul>
-		  </div>
-		</section>
-		<section id="contact">
-		  <div class="se-title">
-		    <h2>联系我</h2>
-		    <span class="border"></span>
-		    <h4>contact me</h4>
-		  </div>
-		  <div class="co-content">
-		    <p>欢迎合作及提供工作机会。</p>
-		    <ul>
-		      <li>
-		        <a href="http://wpa.qq.com/msgrd?v=3&uin=1339918746&site=qq&menu=yes">
-		          <img src="images/QQ.png" alt="1339918746">
-		          <p>1339918746</p>
-		        </a>
-		      </li>
-		      <li>
-		        <a href="http://weibo.com/3199952410/profile?topnav=1&wvr=6&is_all=1">
-		          <img src="images/新浪.png" alt="沧苑">
-		          <p>@沧苑</p>
-		        </a>
-		      </li>
-		      <li>
-		        <a href="https://github.com/Cangyuan">
-		          <img src="images/github.png" alt="cangyuan">
-		          <p>@cangyuan.github</p>
-		        </a>
-		      </li>
-		      <li>
-		        <a href="#">
-		          <img src="images/位置.png" alt="位置">
-		          <p>广东·佛山</p>
-		        </a>
-		      </li>
-		    </ul>
-		  </div>
-		</section>
+			        <p>axure 原型</p>
+			      </li>
+			    </ul>
+			  </div>
+			</section>
+			<section id="contact">
+			  <div class="se-title">
+			    <h2>联系我</h2>
+			    <span class="border"></span>
+			    <h4>contact me</h4>
+			  </div>
+			  <div class="co-content">
+			    <p>欢迎合作及提供工作机会。</p>
+			    <ul>
+			      <li>
+			        <a href="http://wpa.qq.com/msgrd?v=3&uin=1339918746&site=qq&menu=yes">
+			          <img src="images/QQ.png" alt="1339918746">
+			          <p>1339918746</p>
+			        </a>
+			      </li>
+			      <li>
+			        <a href="http://weibo.com/3199952410/profile?topnav=1&wvr=6&is_all=1">
+			          <img src="images/新浪.png" alt="沧苑">
+			          <p>@沧苑</p>
+			        </a>
+			      </li>
+			      <li>
+			        <a href="https://github.com/Cangyuan">
+			          <img src="images/github.png" alt="cangyuan">
+			          <p>@cangyuan.github</p>
+			        </a>
+			      </li>
+			      <li>
+			        <a href="#">
+			          <img src="images/位置.png" alt="位置">
+			          <p>广东·佛山</p>
+			        </a>
+			      </li>
+			    </ul>
+			  </div>
+			</section>
+		</div>
 		<footer>
 		  <div class="wrap-bottom">
 		    <p>copyright © by orca</p>
@@ -265,12 +276,31 @@
 			}
 			]}];
 			$('.event_wrap').eventFlow({'events':bigEvent});
+			// open start
+			$('.head-me').click(function(event) {
+				/* Act on the event */
+
+				$('.me-info').addClass('open-me');
+				$('.wrap').addClass('remove');
+				$('.main-bg').css('display', 'block');
+
+			});
 
 			// colse start
+			function close(){
+				$('.me-info').removeClass('open-me');
+				$('.wrap').removeClass('remove');
+				$('.main-bg').css('display', 'none');
+			}
 			$('.close').click(function(event) {
 				/* Act on the event */
-				$('.me-info').css('display', 'none');
-				$('.wrap').removeClass('wrap');
+				close();
+			});
+			$('.nav-wrap>nav>ul>li').click(function(event) {
+				/* Act on the event */
+				$('.nav-wrap>nav>ul>li>a').removeClass('navActive');
+				$(this).find('a').addClass('navActive');
+				close();
 			});
 		})
 
