--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<header id="header-wrap">
 		  <div class="top-bar">
 		    <div class="bar-wrap">
+		      <div class="chicken"><img src="images/chicken.gif" alt=""></div>
 		      <div class="top-title">
 		        <a href="#"><img src="images/logo-top.png" alt=""></a>
 		        <h2>orca</h2>
@@ -43,7 +44,7 @@
 		          <nav>
 		          	<span class="head-me"><img src="images/me.png" alt=""></span>
 		            <ul>
-		              <li><a href="#">首页</a></li>
+		              <li><a href="#home">首页</a></li>
 		              <li><a href="#about">关于</a></li>
 		              <li><a href="#skill">技能</a></li>
 		              <li><a href="#foot">履历</a></li>
@@ -65,7 +66,7 @@
 		</header>
 		<div class="main">
 			<div class="main-bg"></div>
-			<div class="info-wrap">
+			<div class="info-wrap" id="home">
 			  <div class="info-bg">
 			    <div class="info-img">
 			      <img src="images/logo-top.png" alt="">
@@ -171,7 +172,7 @@
 			  </div>
 			  <div class="wr-content">
 			    <ul>
-			      <li>
+			      <li class="fade">
 			        <a class="w-link" href="http://www.gdchenyi.com.cn" target="_blank">
 			          <div class="wr-img">
 			            <img src="images/cy.jpg" alt="辰宜">
@@ -336,19 +337,20 @@
 			});	
 			//滚动加载css3动画	
 			$(window).scroll(function(){
-			    var a,b,c,con,foot;
+			    var a,b,c,con,foot,wr;
 			    con=$('.co-content').offset().top;
 			    foot=$('#foot').offset().top;
+			    wr=$('#writing').offset().top;
 			    a=eval(con + 100);
 			    b=$(window).scrollTop(); 
 			    c=$(window).height();
 			    if(b+c>a){
 			        $('.co-content>ul>li').addClass('scroll');
 			        }
-			    if (b+c>foot + 50) {
-			    	$('.ev_text_event').addClass('aActiveWid');
+			    if(b+c>wr + 200){
+			        $('.wr-content>ul>li').addClass('fade');
 			        }
-			    })	 
+			    }) 
 		});
 			
 
