--- a/index.html
+++ b/index.html
@@ -240,20 +240,20 @@
 			      </li>
 			      <li>
 			        <a href="http://weibo.com/3199952410/profile?topnav=1&wvr=6&is_all=1">
-			          <img src="images/新浪.png" alt="沧苑">
+			          <img src="images/sina.png" alt="沧苑">
 			          <p>@沧苑</p>
 			        </a>
 			      </li>
 			      <li>
 			        <a href="https://github.com/Cangyuan">
-			          <img src="images/github.png" alt="cangyuan">
+			          <img src="images/github.png" alt="cangyuan" title="cangyuan">
 			          <p>@cangyuan.github</p>
 			        </a>
 			      </li>
 			      <li>
-			        <a href="#">
-			          <img src="images/位置.png" alt="位置">
-			          <p>广东·佛山</p>
+			        <a href="Mailto:orca2017@sina.cn">
+			          <img src="images/email.png" alt="邮件" title="邮件">
+			          <p>orca2017@sina.cn</p>
 			        </a>
 			      </li>
 			    </ul>
