--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
 	<meta name="description" content="orca  女，出生于 中国·河南  喜欢做设计、界面设计、用户体验、前端开发、互联网。">
 	<meta name="keywords" content="orca，前端开发，个人网站">
 	<link rel="img/shortcut icon" type="text/css" href="bitbug_favicon.ico">
@@ -30,6 +31,14 @@
 	</div>
 	<div class="wrap">
 		<header id="header-wrap">
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
 		  <div class="top-bar">
 		    <div class="bar-wrap">
 		      <div class="chicken"><img src="images/chicken.gif" alt=""></div>
