--- a/index.html
+++ b/index.html
@@ -242,19 +242,19 @@
 			    <p>欢迎合作及提供工作机会。</p>
 			    <ul>
 			      <li>
-			        <a href="http://wpa.qq.com/msgrd?v=3&uin=1339918746&site=qq&menu=yes">
+			        <a href="http://wpa.qq.com/msgrd?v=3&uin=1339918746&site=qq&menu=yes" target="_blank">
 			          <img src="images/QQ.png" alt="1339918746">
 			          <p>1339918746</p>
 			        </a>
 			      </li>
 			      <li>
-			        <a href="http://weibo.com/3199952410/profile?topnav=1&wvr=6&is_all=1">
-			          <img src="images/sina.png" alt="沧苑">
-			          <p>@沧苑</p>
+			        <a href="https://twitter.com/Orca_2017" target="_blank">
+			          <img src="images/twitter.png" alt="orca">
+			          <p>@orca</p>
 			        </a>
 			      </li>
 			      <li>
-			        <a href="https://github.com/Cangyuan">
+			        <a href="https://github.com/Cangyuan" target="_blank">
 			          <img src="images/github.png" alt="cangyuan" title="cangyuan">
 			          <p>@cangyuan.github</p>
 			        </a>
