--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 				</p>
 			</li>
 		</ul>
-		<h4><img style="float: left;" src="images/hi-in icon.png" alt="">自我描述</h4>
+		<h4><img style="float: left;" src="images/info.png" alt="">自我描述</h4>
 		<ul class="education">
 			<li>
 				<strong>*</strong>熟悉W3C标准，掌握HTML、CSS、JavaScript、mysql语言，理解AJAX运行机制，掌握JQuery、AngularJs、Bootstrap框架，能够熟练应用HTML/CSS/JavaScript技术，开发符合W3C标准的网站前端页面。
